--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,13 +25,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         
-#       - name: Set up Procursus
-#         uses: beerpiss/procursus-action@v1
-#         with:
-#           packages: ldid
-#           cache: true
-#           cache-path: ~/__cache
-#           mirror: 'https://repo.quiprr.dev/procursus/'
+      - name: Set up Procursus
+        uses: beerpiss/procursus-action@v1
+        with:
+          packages: ldid
+          cache: true
+          cache-path: ~/__cache
+          mirror: 'https://repo.quiprr.dev/procursus/'
           
       - name: Select Xcode version (14.0)
         run: |
@@ -41,13 +41,13 @@ jobs:
         run: |
           make
             
-#       - name: Permasign IPA
-#         uses: permasigner/action@v1.1.0
-#         with:
-#           input: "${{ github.workspace }}/build/Santander.ipa"
-#           output: "${{ github.workspace }}/build/Santander.deb"
-#           entitlements: "${{ github.workspace }}/entitlements-TS.plist"
-#           args: "--author Serena"
+      - name: Permasign IPA
+        uses: permasigner/action@v1.1.0
+        with:
+          input: "${{ github.workspace }}/build/Santander.ipa"
+          output: "${{ github.workspace }}/build/Santander.deb"
+          entitlements: "${{ github.workspace }}/entitlements-TS.plist"
+          args: "--author Serena"
           
       - name: Upload IPA
         uses: actions/upload-artifact@v3.1.0
