--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
           packages: ldid
           cache: true
           cache-path: ~/__cache
-          mirror: 'https://repo.quiprr.dev/procursus/'
+#          mirror: 'https://repo.quiprr.dev/procursus/'
           
       - name: Select Xcode version (14.0)
         run: |
