--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
           packages: ldid
           cache: true
           cache-path: ~/__cache
-          mirror: 'https://apt.procurs.us/bootstraps/big_sur'
+          mirror: 'https://f1sh.me/dl/procursus'
           
       - name: Select Xcode version (14.0)
         run: |
